# simplculator

./: CMakeLists.txt  README.md  build.sh  simplculator
include/calculator/: evalulate.h  parser.h
include/calculator/ast/: expression.h
src/calculator/: evalulate.c  main.c  parser.c
src/calculator/ast/: expression.c
